--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,21 @@
 body{
 
-    text-align: center;
     font-family: "Arial";
-    color: deeppink;
+    text_align: left;
+    color: #333;
+}
+
+#container {
+
+    width: 70%;
+    padding:1em;
+    text_align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+
+}
+
+#container h1 {
+
+    font-size:  20px;
 }
