--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,7 +22,7 @@ body{
 
 #cabecera{
     background-color: #33A;
-    box-shadow: 0px 0px 2px 20px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
